--- a/index.rmd
+++ b/index.rmd
@@ -18,7 +18,7 @@ output:
 
 ---
 
-I am currently finishing my senior year at UC Santa Barbara pursuing a Bachelor of Science in Environmental Studies & Physical Geography w/ a Ocean Science Emphasis. I am a first generation student in the Education Opportunity Program as well as a sustainability analyst for the Greeks-Go-Green organization, executive member of the Isla Vista Surfrider Foundation, UCSB Free Diving Club member, and assistant manager at the South Coast Deli Isla Vista location. 
+I am currently finishing my senior year at UC Santa Barbara pursuing a Bachelor of Science in Environmental Studies & Physical Geography w/ a Ocean Science Emphasis. I am a first generation student in the Education Opportunity Program as well as a sustainability analyst for the Greeks-Go-Green organization, member of the Isla Vista Surfrider Foundation, UCSB Free Diving Club, and assistant manager at the South Coast Deli Isla Vista location. 
 
 
 Outside of school and work, I volunteer at Rancho Del Pueblo CSA Organic farm in Ojai, Ca; enjoy surfing, diving, spearfishing, reading, running, traveling, and backpacking; and attempt to explore and try new things as frequent as possible.
